Fix image not showing in README.md file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,7 +142,7 @@ header {
 }
 
 #hero {
-    background-image: url("../images/Hero-img_small.jpg");
+    background-image: url("../images/hero-img_small.jpg");
     background-color: #cccccc;
     width: 100%;
     height: 300px;
@@ -320,7 +320,7 @@ header {
     width: 40%;
     height: 600px;
 
-    background-image: url("../images/Side-neck-small.jpg");
+    background-image: url("../images/side-neck-small.jpg");
     background-color: #cccccc;
     background-position: center;
     background-repeat: no-repeat;
@@ -557,7 +557,7 @@ fieldset {
     height: 564px;
     width: 48%;
     box-sizing: border-box;
-    background-image: url("../images/Deskyoga_Legs\,hips.jpeg");
+    background-image: url("../images/deskyoga_Legs\,hips.jpeg");
 
     background-position: center;
     background-repeat: no-repeat;
@@ -575,7 +575,7 @@ fieldset {
     height: 564px;
     width: 48%;
     box-sizing: border-box;
-    background-image: url("../images/Desk_yoga_shoulders_neck.jpeg");
+    background-image: url("../images/desk_yoga_shoulders_neck.jpeg");
 
     background-position: center;
     background-repeat: no-repeat;
